@@ -20,7 +20,7 @@
      own application, the package name must be changed from "com.example.*"
      to come from a domain that you own or have control over. -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    android:versionCode="10"
+    android:versionCode="15"
     android:versionName="1.0"
     package="scas.editor.android"
 >
