@@ -1,3 +1,0 @@
-#!/bin/sh
-NOTE_PAD_HOME=`dirname $0`/..
-scala -nc -Dnote_pad.cmd=$1 -Dnote_pad.dir=$2 -Dfile.encoding=UTF-8 -classpath $NOTE_PAD_HOME/libs/scas.jar:$NOTE_PAD_HOME/libs/txt2xhtml.jar:$SQLITE_HOME/sqlite-jdbc-3.7.2.jar $NOTE_PAD_HOME/conduit/note_pad.scala
